@@ -19,6 +19,9 @@ RELEASE 0.09 -
 
  - Add Repository() functionality.
 
+ - Fix auto-deduction of target names so that deduced targets end
+   up in the same subdirectory as the source.
+
  From Anthony Roach:
 
  - Fixed use of command lines with spaces in their arguments,
